--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/27/n10936495.md#1" target="_blank">林辉：抗日名将殉国身后妻儿惨到乞讨</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/17/n11801155.md#1" target="_blank">澳洲参议员：法轮功为中国所有良心犯争人权</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/26/n10174332.md#1" target="_blank">周晓辉：叶利钦退出苏共引发退党潮</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/8/2/n2983321.md#1" target="_blank">诚宇：捅破心灵的那层窗户纸</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
