--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/3/n10757327.md#1" target="_blank">共产暴政录：长春围城饿毙几十万人真相</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/2/24/n4647598.md#1" target="_blank">在法轮大法修炼中重生的宁德人（一）</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/5/n10029772.md#1" target="_blank">林辉：中共翻云覆雨 齐白石去世后被打倒</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/7/n11240138.md#1" target="_blank">美国麻州参议院祝贺第20届世界法轮大法日</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
