--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/24/n9888434.md#1" target="_blank">杨宁：周恩来初恋女友投河 其子被打成右派</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/11/n10473939.md#1" target="_blank">受化学毒剂侵害 越战老兵绝望中见证奇迹</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/7/n10620856.md#1" target="_blank">历经磨难的学者——吴门三大右派</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/21/n2972092.md#1" target="_blank">修炼者的心声：请支持正义良知  选择美好未来</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
